# Sen2Agri-System

sen2agri-processors/: CMakeLists.txt
sen2agri-processors/Composite/: CMakeLists.txt
sen2agri-processors/Composite/Common/: CMakeLists.txt  MACCSMetadataHelper.cpp  MetadataHelper.cpp  MetadataHelper.h  MetadataHelperFactory.cpp  MetadataHelperFactory.h  TheiaMetadataHelper.cpp  TheiaMetadataHelper.h
sen2agri-processors/Composite/CompositePreprocessing/: CompositePreprocessing_2.cpp  ComputeNDVI.cpp  DirectionalCorrectionFunctor.txx
sen2agri-processors/Composite/MaskHandler/: MaskExtractorFilter.h  MaskExtractorFilter.hxx  MaskHandler.cpp
sen2agri-processors/Composite/TestScripts/: bands_mapping_s2_theia.txt  composite_processing.py  composite_processing_CS.py  composite_processing_THEIA.py
sen2agri-processors/Composite/UpdateSynthesis/: CMakeLists.txt  UpdateSynthesisS2.cpp  UpdateSynthesisS2VectorImageFilter.h  UpdateSynthesisS2VectorImageFilter.hxx  UpdateSynthesis_2.cpp
sen2agri-processors/Composite/WeightCalculation/TotalWeight/: totalweightapp.cpp
sen2agri-processors/Composite/WeightCalculation/WeightAOT/: weightaotapp.cpp
sen2agri-processors/Composite/WeightCalculation/WeightOnClouds/: CMakeLists.txt  weightoncloudsapp.cpp
sen2agri-processors/CropMask/PrincipalComponentAnalysis/: CMakeLists.txt
sen2agri-processors/MACCSMetadata/include/: THEIAMetadata.hpp  THEIAMetadataReader.hpp  TheiaMetadata.hpp
sen2agri-processors/MACCSMetadata/src/: CMakeLists.txt  THEIAMetadataReader.cpp
sen2agri-processors/VegetationStatus/: CMakeLists.txt
sen2agri-processors/VegetationStatus/TestScripts/: rsr_cfg.txt  rsr_sensor_file.cfg.in
sen2agri-processors/VegetationStatus/otb-bv/data/: spot5hrg2.rsr
